mdapipkg/unpackaged/objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>Loadout__c</fullName>
        <description>The JSON representing the player loadout (weapons, materials, etc.)</description>
        <label>Loadout</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Current location of the player</description>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>The platform name in human readable form</description>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Xbox One</fullName>
                </value>
                <value>
                    <fullName>PlayStation 4</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>Switch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Player_Data__c</fullName>
        <description>The JSON player data retrieve from an API</description>
        <label>Player Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <description>The Epic Games player UID</description>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Platform__c</columns>
        <columns>eadx__Location__Latitude__s</columns>
        <columns>eadx__Location__Longitude__s</columns>
        <columns>UID__c</columns>
        <columns>Loadout__c</columns>
        <columns>Player_Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>